fix: remove horizontal scroll in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,12 @@ h2 {
 	}
 
 	h1 {
+		font-size: 60px;
 		padding-top: 0;
+	}
+
+	h2 {
+		font-size: 24px;
 	}
 
 	.wrapper {
